tests/baselines/reference/parserAccessors2.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors2.ts(2,9): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors2.ts (1 errors) ====
    class C {
        set Foo(a) { }
            ~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
    }